refactor(crawler): 重构爬虫核心组件并优化依赖管理
- 将SelectType枚举从Const类中独立提取为单独的SelectType类
- 替换UrlUtil工具类为更通用的HttpTool进行URL验证
- 更新CrawlerFileUtil为CrawlerUtil并简化文件操作功能
- 统一使用xxl-tool库中的HttpTool和FileTool替代原有工具类
- 修改UserAgent配置为使用Header.DEFAULT_USER_AGENT_MAC默认值
- 更新测试代码中的文件操作和URL验证逻辑
- 优化图片下载功能使用HttpTool的下载方法
- 调整CSS选择器以提高页面解析准确性